prometheus/prometheus-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
          #kubernetes.io/ingress.class: "nginx-test"
  namespace: default
spec:
  rules:
    - host: 'prometheus.DNS_NAME'
      http:
        paths:
          - path: /
            backend:
              serviceName: prometheus-server
              servicePort: 80
